kubernetes/apps/gdb/stash-uploader/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stash-upload
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - stash.petrovic.network
  rules:
    - matches:
        - path:
            type: Exact
            value: /upload
      backendRefs:
        - name: stash-uploader
          port: 8080
      timeouts:
        request: 0s
        backendRequest: 0s
